[gd_scene load_steps=7 format=2]

[ext_resource path="res://Laser.gd" type="Script" id=1]
[ext_resource path="res://glowing_circle.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.454, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.782, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.388889, 0.666667 )
colors = PoolColorArray( 0, 0.460938, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Environment" id=4]
background_mode = 4
ambient_light_color = Color( 0.380392, 1, 0.854902, 1 )
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="Laser" type="RayCast2D"]
cast_to = Vector2( 2000, 0 )
collision_mask = 6
collide_with_areas = true
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
material = SubResource( 1 )
points = PoolVector2Array( 0, 0, 192, 0 )
default_color = Color( 0.32549, 0.333333, 1, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles2D" type="CPUParticles2D" parent="."]
scale = Vector2( 0.4, 0.4 )
lifetime = 0.3
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
initial_velocity = 413.33
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="CollisionParticles2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.7
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
initial_velocity = 120.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="BeamParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 96, 0 )
emitting = false
lifetime = 0.7
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 717.15
tangential_accel = 100.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )
